# scaler-project

./: .gitignore  Dockerfile  inference.py  pyproject.toml  requirements.txt
server/: app.py
sql_debug_env/: .gitignore  README.md  README_hf.md  openenv.yaml  sql_debug_env.py
