[project]
name = "sql-debug-env"
version = "1.0.0"
description = "SQL Debug OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.31.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "sql_debug_env:app"